Fri Jun 29 22:31:56 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* Reverted the changes in this entry.
	  "Thu Jun 28 13:44:52 2001  Chad Elliott
	  <elliott_c@ociweb.com>". The changes seem to be breaking builds
	  on Sun.

Fri Jun 29 10:14:03 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/config-macosx.h: Removed some macros that don't apply to
	  MacOSX.  Thanks to John Zorko <j.zorko@att.net> for contributing
 	  this.

	* include/makeinclude/platform_macosx.GNU (CC): Changed
	  the -fimplict-templates to -fno-implicit-templates.  Thanks to
 	  John Zorko <j.zorko@att.net> for contributing this.

Wed Jun 27 12:00:34 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/FIFO_Send_Msg.i (send): Make sure that when we use the
	  putmsg() variant of this call that we correctly return the
 	  length.  Thanks to David Trusty <david.trusty@westwave.com> for
 	  reporting this.

	* ace/FIFO_Recv_Msg.i (recv): Make sure that when we use the 
	  getmsg() variant of this call that we correctly return the
 	  length.  Thanks to David Trusty <david.trusty@westwave.com> for
 	  reporting this.

	* ace/Log_Record.{h,cpp}: Added support for extending the 
	  names of the types of logging requests.  Thanks to Kelly
 	  F. Hickel <kfh@mqsoftware.com> and Jonathan Reis
 	  <reis@stentor.com> for this fix.

Thu Jun 28 13:44:52 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/config-sunos5.5.h:

          Add include of sys/feature_tests.h to ensure that certain macros
          are set up correctly.  This is mainly important to SunOS 5.7 and
          later, but may be useful to the earlier versions.

          Also, added a check for the correct value of _POSIX_C_SOURCE to
          set ACE_HAS_POSIX_GETPWNAM_R.  This use to be a conditional in
          config-sunos5.7.h based on gcc 3.0, but it is not specific to gcc.

        * ace/config-sunos5.6.h:

          Added a check for _XPG4_2 before defining