@@ -24,10 +24,13 @@ ACE_FIFO_Send_Msg::send (const ACE_Str_Buf &send_msg)
 {
   // ACE_TRACE ("ACE_FIFO_Send_Msg::send");
 #if defined (ACE_HAS_STREAM_PIPES)
-  return ACE_OS::putmsg (this->get_handle (),
-			 (strbuf *) 0,
-			 (strbuf *) &send_msg,
-			 0);
+  if (ACE_OS::putmsg (this->get_handle (),
+                      (strbuf *) 0,
+                      (strbuf *) &send_msg,
+                      0) == -1)
+    return -1;
+  else 
+    return send_msg.len;
 #else
   iovec iov[2];
 
